# CDS

./: .cursorrules  .env.example  .env.prod.example  .env.production.example  .gitignore  CONFIDENCE_NORMALIZATION_REPORT.md  Caddyfile  DEPLOYMENT.md  FIXES_PHASE10.md  IMPLEMENTATION_PLAN_OCR_URDU.md  PARTY_ROLE_EXTRACTION_REPORT.md  PHASE_P12_COMPLETE.md  PHASE_P13_COMPLETE.md  PHASE_P14_COMPLETE.md  PHASE_P14_PROGRESS.md  PHASE_P1_COMPLETE.md  PHASE_P2_COMPLETE.md  PHASE_P3_COMPLETE.md  PHASE_P4_COMPLETE.md  PHASE_P5_COMPLETE.md  PROMPT12_QAARI_IMPLEMENTATION_SUMMARY.md  PROMPT13_SIDEBAR_IMPLEMENTATION_SUMMARY.md  PROMPT14_PAGE_CHROME_IMPLEMENTATION_SUMMARY.md  PROMPT5_IMPLEMENTATION_SUMMARY.md  PROMPT5_VERIFICATION_REPORT.md  README.md  URDU_OCR_IMPLEMENTATION_REPORT.md  docker-compose.prod.yml  docker-compose.yml  mis_eval.py  smoke_test_output.txt  start-services.ps1  temp_gen_pdf.py  tmp.sql  tmp_eval.py
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/hf_extractor/: Dockerfile  README.md  __init__.py  extractors.py  layoutxlm_infer.py  main.py  ocr_qaari.py  ocr_router.py  ocr_tesseract.py  requirements-ml.txt  requirements-vlm.txt  requirements.txt  schemas.py
backend/rules/: diligence_rules.yaml
backend/scripts/: evaluate_classification.py  make_dataset_csv.py  repair_corruption.py  run_migrations.sh
backend/tests/: run_extraction_tests.py  run_mvp_tests.py  test_doc_classification.py  test_extractions_helpers.py  test_rbac_smoke.py  test_rule_engine_mvp.py
(+434 files in other folders)
